--- a/package.json
+++ b/package.json
@@ -7,15 +7,16 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node server.js",
     "watch": "nodemon server.js",
-    "seed": "node seeds/index.js"
+    "seed": "node seeds/index.js",
+    "schema": "mysql -u root -p < db/schema.sql"
   },
   "repository": {
     "type": "git",
     "url": "git@github.com:jrapich/ecommerce-backend.git"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "https://github.com/jrapich",
+  "license": "MIT",
   "devDependencies": {
     "nodemon": "^2.0.3"
   },
